Bug 897839. Add some null checks for the compositor map. r=mattwoodrow